[package]
name = "gomoku"
version = "0.1.0"
edition = "2018"

[features]
unstable = []

[[bin]]
name = "gomoku"
path = "src/main.rs"

[[bin]]
name = "profiling"
path = "src/profiling.rs"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitvec = "0.22.3"
strum = "0.22"
strum_macros = "0.22"
