[package]
name = "gomoku"
version = "0.1.0"
edition = "2018"

[features]
unstable = []

[[bin]]
name = "gomoku"
path = "src/bin/main.rs"

[[bin]]
name = "profiling"
path = "src/bin/profiling.rs"

[[bin]]
name = "dep_tree"
path = "src/dep_tree.rs"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitvec = "0.22.3"
strum = "0.22"
strum_macros = "0.22"
rand = "0.8.5"
clap = { version = "3.2.20", features = ["derive"]}

